--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jasmine",
-    "test-debug": "npm --node-options --inspect-brk test"
+    "test-debug": "npm --node-options --inspect-brk test",
+    "dbg": "npm run test-debug"
   },
   "author": "lewis zhang",
   "license": "ISC",
